- Changes in ShinyItemAnalysis 1.3.0-5. (2019-04-03) -
-------------------------------------------------------

BUG FIXING
  o SD in Regression section was changed to SE.
  o Keep missing values button is now functioning and it is applied
    for ordinal and binary data.

MAJOR UPDATES
  o Cumulative logistic regression model was implemented for ordinal data.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-4. (2019-03-28) -
-------------------------------------------------------

BUG FIXING
  o Bug in slider in histogram of total scores was fixed. Range is now
    correctly displayed when NA values are present.
  o Fixing versions.

MAJOR UPDATES
  o Math mode is now stable in tables.
    (Thanks to Stéphane Laurent)
  o UI for polytomous models in Regression section was added.
  o Traditional item analysis table is done via ItemAnalysis() function.
    It now includes also average score.

MINOR UPDATES
  o startShinyItemAnalysis() automatically launches default web browser.
  o Sample code and wording was updated for traditional item analysis table
    in app and also in reports.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-3. (2019-03-26) -
-------------------------------------------------------

MINOR UPDATES
  o ggWrightMap() now can display user-specified names of items
    (Reported by Matthew G R Courtney)
  o plotDIFLogistic() now can display user-specified names
    of reference and focal group.
  o Some typos were fixed.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-2. (2019-03-15) -
-------------------------------------------------------

MAJOR UPDATES
  o Analysis for ordinal items has been added. This includes use of ordinal
    data in sections Summary (histogram of Total scores, success rate),
    Reliability, Validity (correlations, predictive validity),

